--- a/02-CSS/homework/responsive-web/less/variables.less
+++ b/02-CSS/homework/responsive-web/less/variables.less
@@ -5,7 +5,7 @@
 @nav-font: @river-bend;
 @nav-border: @sea-shell;
 
-@header-font-color: @ebony-clay;
+@header-font-color: red;
 @main-font-color: @shuttle-gray;
 @main-border-color: @border-real;
 
