--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -4,10 +4,7 @@ nav {
     padding: 15px;
     background-color: @nav-bg;
     ul {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
+        .flex (row, space-around, center);
         padding-top: 10px;
         width: 40%;
         a{
