--- a/02-CSS/homework/responsive-web/less/navigation.less
+++ b/02-CSS/homework/responsive-web/less/navigation.less
@@ -12,5 +12,8 @@ nav {
             color: @nav-font;
             text-decoration: none;
         }
+        @media @phone{
+            width: 80%;
+        }
     }
 }
