--- a/02-CSS/homework/responsive-web/css/index.css
+++ b/02-CSS/homework/responsive-web/css/index.css
@@ -181,6 +181,11 @@ nav ul a {
   color: #454A59;
   text-decoration: none;
 }
+@media (max-width: 500px) {
+  nav ul {
+    width: 80%;
+  }
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
@@ -213,7 +218,7 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
-@media "(max-width: 500px)" {
+@media (max-width: 500px) {
   .home .music-images .ondas,
   .home .music-images .tecnologia {
     display: none;
@@ -238,8 +243,24 @@ footer {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .actual {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+  }
+}
 .home .actual .actual-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .actual .actual-text {
+    width: 100% ;
+    padding-left: 3px;
+    padding-right: 3px;
+  }
 }
 .home .actual .actual-text h3 {
   margin-bottom: 10px;
@@ -262,6 +283,13 @@ footer {
   background-color: white;
   color: #22283A;
 }
+@media (max-width: 500px) {
+  .home .actual .actual-text .btn {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+}
 .home .actual .actual-img {
   width: 46%;
   margin-left: 4%;
@@ -270,4 +298,12 @@ footer {
   width: 100%;
   height: auto;
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .home .actual .actual-img {
+    width: 100%;
+    margin-left: 1px;
+    margin-right: 1px;
+    padding: 5px;
+  }
 }
